# MenchGame

./: .gitignore  AIEngine.cpp  AIEngine.h  AnalyticalEngine.cpp  AnalyticalEngine.h  Board.cpp  Board.h  BoardCirclePieceInfo.cpp  BoardCirclePieceInfo.h  CMakeLists.txt  Circle.cpp  Circle.h  ColorModel.cpp  ColorModel.h  ColorModelFactory.cpp  ColorModelFactory.h  Command.h  CommandStream.cpp  CommandStream.h  DataCarrier.h  Dice.cpp  Dice.h  DistanceCoveredDataCarrier.cpp  DistanceCoveredDataCarrier.h  Game.cpp  Game.h  GameActor.h  GameExecutioner.cpp  GameExecutioner.h  GameFinishedDataCarrier.cpp  GameFinishedDataCarrier.h  GamePlay.cpp  GamePlay.h  MoveCommand.cpp  MoveCommand.h  MovePieceOutOfBoard.cpp  MovePieceOutOfBoard.h  MovePieceOutOfBoardCommand.cpp  MovePieceOutOfBoardCommand.h  MovingPieceInDataCarrier.cpp  (+21 more)
